tests/sksl/errors/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 3: function 'not_detected' can exit without returning a value
error: 4: function 'is_detected' can exit without returning a value
error: 4: function 'is_detected' exits without returning a value
3 errors
